--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
-/* Escreva seu css aqui */
+body {
+  background-color: #0a0908;
+  color: #d9d9d9;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2em;
+}
